--- a/index.html
+++ b/index.html
@@ -8,44 +8,66 @@
 </head>
 <body>
     
-    <form class="container" action="">
-        <input type="number" placeholder="min" id="min">
-        <input type="number" placeholder="max" id="max">
+    <div class="container">
+        <div class="title">
+            <h1 class="title__text">Divine Calculator</h1>
+        </div>
+        <div class="wrapper">
+            <input type="number" placeholder="min" id="min">
+            <input type="number" placeholder="max" id="max">
+        </div>
+        <div class="wrapper">
+            <input type="number" placeholder="min" id="min">
+            <input type="number" placeholder="max" id="max">
+        </div>
 
-        <input type="number" placeholder="min" id="min">
-        <input type="number" placeholder="max" id="max">
+        <div class="wrapper">
+            <input type="number" placeholder="min" id="min">
+            <input type="number" placeholder="max" id="max">
+        </div>
 
-        <input type="number" placeholder="min" id="min">
-        <input type="number" placeholder="max" id="max">
+        <div class="wrapper">
+            <input type="number" placeholder="min" id="min">
+            <input type="number" placeholder="max" id="max">
+        </div>
 
-        <input type="number" placeholder="min" id="min">
-        <input type="number" placeholder="max" id="max">
+        <div class="wrapper">
+            <input type="number" placeholder="min" id="min">
+            <input type="number" placeholder="max" id="max">
+        </div>
 
-        <input type="number" placeholder="min" id="min">
-        <input type="number" placeholder="max" id="max">
+        <div class="wrapper">
+            <input type="number" placeholder="min" id="min">
+            <input type="number" placeholder="max" id="max">
+        </div>
 
-        <input type="number" placeholder="min" id="min">
-        <input type="number" placeholder="max" id="max">
-
-        <input type="number" placeholder="min" id="min">
-        <input type="number" placeholder="max" id="max">
+        <div class="wrapper">
+            <input type="number" placeholder="min" id="min">
+            <input type="number" placeholder="max" id="max">
+        </div>
         
-        <input type="number" placeholder="min" id="min">
-        <input type="number" placeholder="max" id="max">
+        <div class="wrapper">
+            <input type="number" placeholder="min" id="min">
+            <input type="number" placeholder="max" id="max">
+        </div>
 
-        <input type="number" placeholder="min" id="min">
-        <input type="number" placeholder="max" id="max">
-
+        <div class="wrapper">
+            <input type="number" placeholder="min" id="min">
+            <input type="number" placeholder="max" id="max">
+        </div>
+    <div class="btn-wrapper">
         <button class="submit" type="submit">Calculate</button>
         <button class="clear" type="submit">Clear</button>
-    </form>
-
+    </div>
     <div class="result">
         <h1 class="text">0</h1>
         <div class="wrap-img">
             <img class="img" src="divine.png">
         </div>
     </div>
+    </div>
+
+
 
 
     <script src="main.js"></script>
