change file structure

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="result">
         <h1 class="text">0</h1>
         <div class="wrap-img">
-            <img class="img" src="divine.png">
+            <img class="img" src="img/divine.png">
         </div>
     </div>
     </div>
